FIRELINE BUG FIX!!!!!
1. Figured out why the website is not responsive on my phone;
2. Changed the structure of the top part of index.html;
3. Minor changes to both .css files.

--- a/main-RWD.css
+++ b/main-RWD.css
@@ -1,8 +1,11 @@
+@media only screen and (min-width:0px){
+  body{
+    font-size: 10px;
+  }
+
+
 @media only screen and (min-width:640px){
-    .place-holder{
-      width: 100%;
-      height: 8.2em;
-    }
+    
 
     .picture img{
       width: 18em;
